<resources>
    <string name="app_name">GSEZ TT</string>
    <string name="dashboard">Dashboard</string>
    <string name="bordereau_module">Barcode Entry</string>
    <string name="bc_re_print_n_edit">Bc Re-Print &amp; Edit</string>
    <string name="loading_wagons">Loading Wagons</string>
    <string name="origin_verification">Origin Verification</string>
    <string name="inspection_n_sales">Inspection / Sales</string>
    <string name="drawer_delivery_management">Delivery Management</string>
    <string name="delivery_management">Delivery\nManagement</string>
    <string name="logout">Logout</string>
    <string name="content_des">image</string>
    <string name="session_expiry_">Your session has been Expire\n Please click Ok button to start new session</string>
    <string name="ok">Ok</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="barcode_entry">Barcode Entry</string>
    <string name="loading_n_declration">Loading &amp;\nDeclaration</string>
    <string name="loading_n_declration_">Loading &amp; Declaration</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="timer_inventory_management">GSEZ Timber\nTrading</string>
    <string name="no_internet">Please Check Internet Connection</string>
    <string name="title_loading_wagons">Loading Wagons</string>
    <string name="title_bc_re_print">BC Re-Print &amp; Edit</string>
    <string name="title_barcode_entrie">Barcode Entry</string>
    <string name="select">Select</string>
    <string name="select_all">Select All</string>
    <string name="user_history_">User History</string>
    <string name="origin_cfat">Origin</string>
    <string name="destination">Destination</string>
    <string name="loading_location">Loading Location</string>
    <string name="truck_no">Truck No</string>
    <string name="transporter">Transporter</string>
    <string name="forest">Forest</string>
    <string name="under_maintenance">Under Maintenance</string>
    <string name="aac">AAC</string>
    <string name="distance">Distance</string>
    <string name="fsc">FSC</string>
    <string name="Leude_chargement">Leude Chargement</string>
    <string name="vehicle_no">Vehicle No</string>
    <string name="bordereu_date">Bordereau Date</string>
    <string name="stock_declared_date">Stock Declared Date</string>
    <string name="date">Bordereau Date :&#160;</string>
    <string name="_date_">Date :&#160;</string>
    <string name="date_">Date</string>
    <string name="bordereau_space">RecordDocNo :&#160;</string>
    <string name="Boreau_no">Bordereau No</string>
    <string name="bordereu_no_">Bordereau No :&#160;</string>
    <string name="Boreau_type">Bordereau Type</string>
    <string name="total_found">Total %1$d Found</string>
    <string name="logcount_log_no">%1$d.Log No :&#160;</string>
    <string name="scan">Scan</string>
    <string name="rescan">Re-Scan</string>
    <string name="total_tonnage">Total Tonnage :&#160;</string>
    <string name="retry">Retry</string>
    <string name="electronic_bordereau">&#160;Electronic</string>
    <string name="manual_bordereau">&#160;Manual</string>
    <string name="truck">&#160;Truck</string>
    <string name="wagon">&#160;Wagon</string>
    <string name="barge">&#160;Barge</string>
    <string name="confirm">Confirm</string>
    <string name="cancel_">Cancel</string>
    <string name="reject">Reject</string>
    <string name="log_no">Log No</string>
    <string name="log_no_">Log No :</string>
    <string name="plaque_no">Plaque No</string>
    <string name="dia_mesurement">Dia Mesurement</string>
    <string name="essence">Essence</string>
    <string name="quality">Quality</string>
    <string name="dia">Dia1</string>
    <string name="dia2">Dia2</string>
    <string name="dia_3">Dia3</string>
    <string name="dia_4">Dia4</string>
    <string name="_long">Long</string>
    <string name="cbm">CBM</string>
    <string name="volume">Volume</string>
    <string name="confirm_n_print">Confirm &amp; Print</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="stock_posting">Stock Posting</string>
    <string name="print">Print</string>
    <string name="declare">Declare</string>
    <string name="declaration">Declaration</string>
    <string name="deleted_log_list">Deleted Log Listing</string>
    <string name="reset">Reset</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="do_you_want_to_proceed">Do you want to proceed with this operation</string>
    <string name="you_are_not_a_super_user">You are not a super user</string>
    <string name="no_data_found">Data Not Found.</string>
    <string name="no_offline_data_found">Offline Data  Not Found.</string>
    <string name="no_logs_found">Logs Not Found.</string>
    <string name="forest_wagon_no">Forest/Wagon No :&#160;</string>
    <string name="_wagon_no">Wagon No :&#160;</string>
    <string name="_truck_no">Truck No :&#160;</string>
    <string name="_barge_no">Barge No :&#160;</string>
    <string name="tonnage_space">Tonnage :&#160;</string>
    <string name="cbm_spcae">CBM :&#160;</string>
    <string name="inspection_">Inspection :&#160;</string>
    <string name="essence_space">Essence :&#160;</string>
    <string name="supplier_space">Supplier :&#160;</string>
    <string name="forest_">Forest :&#160;</string>
    <string name="truck_no_">Truck No :&#160;</string>
    <string name="Boreau_no_space">Bordereau No :&#160;</string>
    <string name="customer_name_space">Customer Name :&#160;</string>
    <string name="grade_name_space">Grade Name :&#160;</string>
    <string name="manual_Boreau_no_space">Manual Bordereau :&#160;</string>
    <string name="electronic_Boreau_no_space">Electronic Bordereau :&#160;</string>
    <string name="no_of_logs">No Of Logs :&#160;</string>
    <string name="barcode_entries">Barcode Entry</string>
    <string name="confirm_n_print_">Confirm &amp;\nPrint</string>
    <string name="generate_master_barcode">Generate Master\nBarcode</string>
    <string name="upload_take_photo">Upload/Take\nPhoto</string>
    <string name="gsez__decleration">GSEZ Declaration</string>
    <string name="forester_declaration">Forester Declaration</string>
    <string name="log_deleted_successfully">Log deleted successfully.</string>
    <string name="forest_supplier">Forest Supplier</string>
    <string name="location">Location</string>
    <string name="select_bordereau_for_generating_pdf">Select bordereau for generating pdf</string>
    <string name="select_bordereau_for_declare">Select bordereau for declare</string>
    <string name="scan_barcod">Scan Barcode</string>
    <string name="proceed_to__inspection">Proceed To Inspection</string>
    <string name="_wagon_no_">Wagon No :&#160;</string>
    <string name="wagon_no">Wagon No</string>
    <string name="price">Price</string>
    <string name="refraction">Refraction %</string>
    <string name="cust_name">Customer Name</string>
    <string name="responsible_customer">Responsible - Customer</string>
    <string name="grader_GSEZ">Grader - GSEZ</string>
    <string name="tracer_charges">Tracer Charges</string>
    <string name="grade">Grade</string>
    <string name="loading_incaharge">Loading Incharge</string>
    <string name="parc_de_reception">Parc De Reception</string>
    <string name="Approval_list">Approval List</string>
    <string name="delivered_list">Delivered List</string>
    <string name="revoke">Revoke</string>
    <string name="return_">Return</string>
    <string name="instock">Instock</string>
    <string name="representative_sign">Digital Signature Sez Representative</string>
    <string name="customer_sign">Digital Signature Customer</string>
    <string name="sales_inspection">Sales Inspection</string>
    <string name="ground_sales">Ground Sales</string>
    <string name="inspeection_no_">Inspection No :&#160;</string>
    <string name="customer_name_">Customer Name :&#160;</string>
    <string name="date_space">Date :&#160;</string>
    <string name="grade_name_">Grade Name :&#160;</string>
    <string name="laodding_location">Loading Location</string>
    <string name="confirm_for_approval">Confirm For Approval</string>
    <string name="confirm_for_delivery">Confirm Delivery</string>
    <string name="refraction_diam">Refraction Diam</string>
    <string name="refraction_length">Refraction Length</string>
    <string name="confirm_billing">Confirm Billing</string>
    <string name="remark">Remark</string>
    <string name="comment">Comment</string>
    <string name="image">Images</string>
    <string name="Permission_Denied">Permission denied</string>
    <string name="Please_give_permission_for_app_functionality">Please give permission for app functionality</string>
    <string name="If_you_reject_permission_you_can_not_use_this_service">If you reject permission,you can not use this service</string>
    <string name="Please_turn_on_permissions_at">Please turn on permissions at [Setting] > [Permission]</string>
    <string name="unable_to_process">Unable to process your request please try after some time</string>
    <string name="activity_intent_filter_action">com.zebra.datacapture1.ACTION</string>
    <string name="activity_action_from_service">com.zebra.datacapture1.service.ACTION</string>
    <string name="activity_action_from_nautiz">android.intent.action.SCANRESULT</string>
    <string name="datawedge_intent_key_source">com.symbol.datawedge.source</string>
    <string name="datawedge_intent_key_label_type">com.symbol.datawedge.label_type</string>
    <string name="datawedge_intent_key_data">com.symbol.datawedge.data_string</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Please_enter_log_no">Please enter log no</string>
    <string name="are_you_sure_want_to_delete_all_selected_log">Are you sure want to delete all selected log?</string>
    <string name="please_select_logs">Please select logs</string>
    <string name="duplicate_log_found">Log number already exits.</string>
    <string name="log_has_been_selected">log has been selected</string>
    <string name="inspection_no_not_found">Inspection number not found.</string>
    <string name="pdf_not_found">PDF not found.</string>
    <string name="empty_wagon">Wagon number should not be empty</string>
    <string name="empty_forest">Forest should not be empty</string>
    <string name="empty_bordereau_no">Bordereau no should not be empty</string>
    <string name="customer_sign_error">Customer Sign should not be empty</string>
    <string name="representative_sign_error">Representative Sign should not be empty</string>
    <string name="select_transporter">Please select transporter</string>
    <string name="select_vehicle_no">Please select vehicle no</string>
    <string name="maximum_long_value">Maximum allowed Long value is 2000</string>
    <string name="maximum_dia_value">Maximum allowed dia value is 250</string>
    <string name="after_slash_should_not_allow_more_than_four">Should not allowed more than 4</string>
    <string name="please_enter_valid_log_no">Please enter valid log no</string>
    <string name="long_value_greater_than_dia">Long value should be greater than average diameter</string>
    <string name="discover_printers">Discover Printers</string>
    <string name="none">None</string>
    <string name="saved_printer">Saved Printer</string>
    <string name="search_printer_banner">Click Printer from list to print barcode</string>
    <string name="be">BE</string>
    <string name="lw">LW</string>
</resources>