<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                />
            <ImageView
                android:id="@+id/ivLogout"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:layout_alignParentEnd="true"
                android:src="@drawable/logout"
                android:clickable="true"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/logout"
                app:tint="@color/white" />

            <LinearLayout
                android:id="@+id/linHeader"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp">

                <!--   <ImageView
                       android:layout_width="@dimen/_120sdp"
                       android:layout_height="@dimen/_120sdp"
                       android:contentDescription="@string/content_des"
                       android:src="@drawable/timber_splash" />-->

                <ImageView
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:contentDescription="@string/content_des"
                    android:src="@drawable/gsez_logo_new" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginTop="-20dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/timer_inventory_management"/>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_below="@+id/linHeader">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_marginBottom="@dimen/_15sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/french"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/langSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:thumbTint="@color/white"
                        android:checked="false"
                        android:background="@color/white"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_marginStart="@dimen/_7sdp"
                        android:layout_marginEnd="@dimen/_7sdp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/english"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    >
                    <!--android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"-->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_Borderau"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        app:cardCornerRadius="@dimen/_8sdp"
                        app:cardBackgroundColor="@color/white"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/_4sdp"
                        >
                        <RelativeLayout
                            android:layout_height="match_parent"
                            android:layout_width="match_parent">
                            <LinearLayout
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_centerInParent="true"
                                android:layout_marginTop="@dimen/_10sdp"
                                >
                                <ImageView
                                    android:layout_width="@dimen/_25sdp"
                                    android:layout_height="@dimen/_25sdp"
                                    android:src="@drawable/bl_bodero_module"
                                    android:layout_marginTop="@dimen/_10sdp"
                                    android:contentDescription="@string/content_des"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/_12sdp"
                                    android:fontFamily="@font/poppins_regular"
                                    android:textColor="#272A3F"
                                    android:gravity="center"
                                    android:layout_marginStart="@dimen/_2sdp"
                                    android:layout_marginEnd="@dimen/_2sdp"
                                    android:layout_marginTop="@dimen/_14sdp"
                                    android:text="@string/barcode_entry"/>

                                <TextView
                                    android:visibility="gone"
                                    android:id="@+id/module_barcode"
                                    android:text="@string/be"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>
                            </LinearLayout>
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_loading_wagons"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        app:cardCornerRadius="@dimen/_8sdp"
                        app:cardBackgroundColor="@color/white"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/_4sdp"
                        >
                        <RelativeLayout
                            android:layout_height="match_parent"
                            android:layout_width="match_parent">
                            <LinearLayout
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:orientation="vertical"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_marginTop="@dimen/_10sdp"
                                >
                                <ImageView
                                    android:layout_width="@dimen/_25sdp"
                                    android:layout_height="@dimen/_25sdp"
                                    android:src="@drawable/bl_loading_wagons"
                                    android:layout_marginTop="@dimen/_10sdp"
                                    android:contentDescription="@string/content_des"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/_12sdp"
                                    android:fontFamily="@font/poppins_regular"
                                    android:textColor="#272A3F"
                                    android:gravity="center"
                                    android:layout_marginStart="@dimen/_2sdp"
                                    android:layout_marginEnd="@dimen/_2sdp"
                                    android:layout_marginTop="@dimen/_14sdp"
                                    android:text="@string/loading_wagons"/>

                                <TextView
                                    android:visibility="gone"
                                    android:id="@+id/module_wagons"
                                    android:text="@string/lw"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>


                            </LinearLayout>
                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>