<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_15sdp"
    android:layout_marginStart="@dimen/_25sdp"
    android:layout_marginEnd="@dimen/_25sdp"
    app:cardBackgroundColor="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/linContent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_15sdp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:textColor="@color/colorPremiumBlack"
                    android:text="@string/do_you_want_to_proceed"/>

            </LinearLayout>




        </LinearLayout>
        <LinearLayout
            android:layout_height="@dimen/_40sdp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@+id/linContent">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColor="@color/white"
                android:text="@string/yes"/>
        </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@color/light_green">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:text="@string/No"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>